[gd_scene load_steps=9 format=2]

[ext_resource path="res://Elementos/Visuais/Icones/Monitor.svg" type="Texture" id=1]
[ext_resource path="res://Cenas/CaixaDialogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/FonteArial.tscn" type="PackedScene" id=3]
[ext_resource path="res://Codigos/TelaInternetFase1.gd" type="Script" id=5]
[ext_resource path="res://Cenas/AudioAcerto.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cenas/AudioErro.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=2]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 22, 0 ), Vector2( -19, 0 ), Vector2( 17, 0 ), Vector2( -23, 0 ), Vector2( 21, 0 ), Vector2( 0, 0 ) ]
}

[node name="TelaInternetFase1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.607843, 1, 0.713726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaixaDialogo" parent="." instance=ExtResource( 2 )]

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/Campo/Margem" index="0"]
text = "Texto Apresentacao."

[node name="Icone" parent="CaixaDialogo/Margem/Elementos/BotaoDireita/ConteinerVertical" index="0"]
margin_right = 223.0

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/BotaoDireita/ConteinerVertical" index="1"]
margin_right = 223.0
text = "BotaoIr"

[node name="Tela" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -330.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Centro" type="CenterContainer" parent="Tela"]
margin_left = 960.0
margin_top = 375.0
margin_right = 960.0
margin_bottom = 375.0
mouse_filter = 2

[node name="Panel" type="Sprite" parent="Tela/Centro"]
self_modulate = Color( 0.745098, 0.992157, 0.498039, 1 )
texture = ExtResource( 1 )

[node name="Lista" type="VBoxContainer" parent="Tela/Centro/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -549.0
margin_top = -356.0
margin_right = -549.0
margin_bottom = -356.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Tela/Centro/Panel/Lista" instance=ExtResource( 3 )]
margin_right = 1098.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0, 0, 0, 0.470588 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.156863 )
text = "Senha (0 de 5)"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Tela/Centro/Panel/Lista"]
margin_top = 172.0
margin_right = 1098.0
margin_bottom = 176.0
custom_styles/separator = SubResource( 1 )

[node name="MargemSuperior" type="MarginContainer" parent="Tela/Centro/Panel/Lista"]
margin_top = 180.0
margin_right = 1098.0
margin_bottom = 444.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 0
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="ColunaCima" type="HBoxContainer" parent="Tela/Centro/Panel/Lista/MargemSuperior"]
margin_left = 20.0
margin_right = 1078.0
margin_bottom = 254.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MargemInferior" type="MarginContainer" parent="Tela/Centro/Panel/Lista"]
margin_top = 448.0
margin_right = 1098.0
margin_bottom = 712.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = -10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ColunaBaixo" type="HBoxContainer" parent="Tela/Centro/Panel/Lista/MargemInferior"]
margin_left = 20.0
margin_top = -10.0
margin_right = 1078.0
margin_bottom = 244.0
mouse_filter = 2
size_flags_vertical = 3

[node name="AudioAcerto" parent="." instance=ExtResource( 8 )]

[node name="AudioErro" parent="." instance=ExtResource( 9 )]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Animar" type="AnimationPlayer" parent="Camera"]
anims/Tremer = SubResource( 2 )

[editable path="CaixaDialogo"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoEsquerda"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoDireita"]
